[package]
name = "xml-mut-cli"
version = "0.0.0"
edition = "2021"

[dependencies]
roxmltree = "0.18.0"
clap = { version = "4.1.8", features = ["derive"] }
walkdir = "2.3.2"
xml-mut-data = { path = "../xml-mut-data" }
xml-mut-parse = { path = "../xml-mut-parse" }
xml-mut-impl = { path = "../xml-mut-impl" }
