[package]
name = "xml-mut-cli"
version = "0.0.0"
authors = ["Tomas Dambrauskas <tomas.sql@proton.me>"]
description = """
A simple XML mutation definition language resembling SQL. 
Define your simple XML transformations in an easy and readable way.
"""
keywords = ["xml", "mutation", "dsl", "transform"]
documentation = "https://github.com/tomuxmon/xml-mut"
homepage = "https://github.com/tomuxmon/xml-mut"
repository = "https://github.com/tomuxmon/xml-mut"
license = "MIT OR Apache-2.0"
edition = "2021"

[[bin]]
name = "xml-mut"
path = "src/main.rs"

[dependencies]
itertools = "0.12"
roxmltree = "0.19.0"
xot = { git = "https://github.com/tomuxmon/xot" }
clap = { version = "4.1.8", features = ["derive"] }
walkdir = "2.3.2"
xml-mut-data = { path = "../xml-mut-data" }
xml-mut-parse = { path = "../xml-mut-parse" }
xml-mut-impl = { path = "../xml-mut-impl" }
xml-mut-xot = { path = "../xml-mut-xot" }
